--- a/doctool/templates/default/index.tmpl
+++ b/doctool/templates/default/index.tmpl
@@ -3,8 +3,8 @@
 	<title>All JavaScript Elements</title>
 </head>
 <body>
-	
-	<h1>Objects</h1>
+	<% include('header.inc'); %>
+	<h2>Objects</h2>
 	<ul>
 	<%
 	
@@ -17,7 +17,7 @@
 	%>
 	</ul>
 	
-	<h1>Functions</h1>
+	<h2>Functions</h2>
 	<ul>
 	<%
 		var objs = global.getChildren(2);
@@ -28,7 +28,7 @@
 	%>
 	</ul>
 	
-	<h1>Methods</h1>
+	<h2>Methods</h2>
 	<ul>
 	<%
 		var objs = global.getChildren(6);
@@ -39,7 +39,7 @@
 	%>
 	</ul>
 	
-	<h1>Variables</h1>
+	<h2>Variables</h2>
 	<ul>
 	<%
 		var objs = global.getChildren(3);
@@ -50,7 +50,7 @@
 	%>
 	</ul>
 	
-	<h1>Properties</h1>
+	<h2>Properties</h2>
 	<ul>
 	<%
 		var objs = global.getChildren(5);
