--- a/doctool/templates/default/index.tmpl
+++ b/doctool/templates/default/index.tmpl
@@ -4,63 +4,10 @@
 </head>
 <body>
 	<% include('header.inc'); %>
-	<h2>Objects</h2>
 	<ul>
-	<%
-
-		var global = elements;
-		var objs = global.getChildren(4);
-
-		for( var i = 0, len = objs.length; i < len; i++){
-			print("<li><strong>"+ objs[i].name +"</strong>"+ objs[i].description +"</li>");
-		}
-	%>
-	</ul>
-
-	<h2>Functions</h2>
-	<ul>
-	<%
-		var objs = global.getChildren(2);
-
-		for( var i = 0, len = objs.length; i < len; i++){
-			print("<li><strong>"+ objs[i].name +"</strong>: "+ objs[i].description +"</li>");
-		}
-	%>
-	</ul>
-
-	<h2>Methods</h2>
-	<ul>
-	<%
-		var objs = global.getChildren(6);
-
-		for( var i = 0, len = objs.length; i < len; i++){
-			print("<li><strong>"+ objs[i].name +"</strong>: "+ objs[i].description +"</li>");
-		}
-	%>
-	</ul>
-
-	<h2>Variables</h2>
-	<ul>
-	<%
-		var objs = global.getChildren(3);
-		for( var i = 0, len = objs.length; i < len; i++) {	%>
-			<li>
-				<strong><%= objs[i].name %></strong>
-				<em><%= objs[i].type.name %></em>
-				<%= objs[i].description %>
-			</li>
-	<% } %>
-	</ul>
-
-	<h2>Properties</h2>
-	<ul>
-	<%
-		var objs = global.getChildren(5);
-
-		for( var i = 0, len = objs.length; i < len; i++){
-			print("<li><strong>"+ objs[i].name +"</strong>: "+ objs[i].description +"</li>");
-		}
-	%>
+		<% for( var i = 0; i < files.length; i++ ){ %>
+			<li><%= files[i].name %></li>
+		<% } %>
 	</ul>
 
 </body>
